2007-03-29  Zoltan Varga  <vargaz@gmail.com>

	* autogen.sh: Applied patch from Priit Laes <amd@store20.com>. Fix the running
	of libtoolize.

	* ltmain.sh config.sub config.guess: Removed, libtoolize creates them now.

2007-03-13  Jonathan Chambers  <joncham@gmail.com>

	* include/gc.h: Fix _WIN64 typedefs.
	* libgc.vcproj: Fix Release target and begin Win64 port.
	
2007-02-01  Geoff Norton  <gnorton@customerdna.com>

	* include/private/gc_pthread_redirects.h:
	* include/private/gc_config_macros.h:
	* include/private/gc_priv.h:
	* configure.in:
	* pthread_support.c
	* specific.c:  Support for NetBSD-CURRENT.  Loosely based on NetBSD
	pkgsrc patch.

2006-12-22  Robert Jordan  <robertj@gmx.net>

	* include/private/gcconfig.h, os_dep.c:
	Add FreeBSD/amd64 support. Based on a FreeBSD Port Collection patch.
	r=Paolo.

2006-11-19  Allan Hsu <allan@counterpop.net>

	* libgc/darwin_stop_world.c, libgc/include/private/gc_priv.h,
	libgc/os_dep.c: Fixes to make the GC work on OSX/Intel with XCode
	2.4 (10.4u SDK and newer).

	This code should work with older versions of the SDK as well. 

Tue Oct 10 16:58:37 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* darwin_stop_world.c: patch from Allan Hsu <allan@counterpop.net>
	to avoid using memory just after freeing it.

2006-08-31  Zoltan Varga  <vargaz@freemail.hu>

	* libgc.vcproj: Define GC_INSIDE_DLL on VC build too.

2006-08-18  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (EXTRA_DIST): Fix make dist.

	* libtool.m4: Removed, should not be in SVN.

2006-07-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Applied patch from Sergey Tikhonov <tsv@solvo.ru>. Beginning
	of alpha support.

2006-06-28  Martin Baulig  <martin@ximian.com>

	* darwin_stop_world.c, pthread_support.c: Committing a patch from
	Allan Hsu <allan@imeem.com> to fix memory leaks; see bug #78628.

2006-06-26  Zoltan Varga  <vargaz@gmail.com>

	* solaris_threads.c: And another one.

	* solaris_pthreads.c: Avoid another solaris/x86 #error.
