@@ -1,3 +1,9 @@
+2007-05-09  Jonathan Chambers  <joncham@gmail.com>
+
+	* win32_threads.c: If SuspendThread fails, don't abort. Instead
+	remove thread from GC, as this only seems to happen when thread is
+	terminating.
+
 2007-03-29  Zoltan Varga  <vargaz@gmail.com>
 
 	* autogen.sh: Applied patch from Priit Laes <amd@store20.com>. Fix the running
